DEV-2402 Some refactoring and test addition
Shuffled the order of stages around to do as much as practical in parallel
and that pave will not run when sage fails. Also updated the
SomaticPipelineTest to reflect the new order

Added stage tests for PaveGermline and PaveSomatic.

Otherwise just superficial refactoring.