@@ -1,10 +1,10 @@
 package com.hartwig.pipeline.tertiary.pave;
 
-import java.util.ArrayList;
+import static com.hartwig.pipeline.execution.vm.VirtualMachinePerformanceProfile.custom;
+
 import java.util.Collections;
 import java.util.List;
 
-import com.google.common.collect.ImmutableList;
 import com.hartwig.pipeline.Arguments;
 import com.hartwig.pipeline.ResultsDirectory;
 import com.hartwig.pipeline.calling.sage.SageOutput;
@@ -12,6 +12,7 @@ import com.hartwig.pipeline.datatypes.DataType;
 import com.hartwig.pipeline.execution.PipelineStatus;
 import com.hartwig.pipeline.execution.vm.BashCommand;
 import com.hartwig.pipeline.execution.vm.BashStartupScript;
+import com.hartwig.pipeline.execution.vm.ImmutableVirtualMachineJobDefinition;
 import com.hartwig.pipeline.execution.vm.InputDownload;
 import com.hartwig.pipeline.execution.vm.VirtualMachineJobDefinition;
 import com.hartwig.pipeline.metadata.AddDatatype;
@@ -28,19 +29,17 @@ import com.hartwig.pipeline.stages.Stage;
 import com.hartwig.pipeline.storage.GoogleStorageLocation;
 import com.hartwig.pipeline.storage.RuntimeBucket;
 
-import org.jetbrains.annotations.NotNull;
-
 public abstract class Pave implements Stage<PaveOutput, SomaticRunMetadata> {
 
-    public static final String PAVE_FILE_ID = "pave";
+    static final String PAVE_FILE_NAME = "pave";
 
     private final ResourceFiles resourceFiles;
     private final InputDownload vcfDownload;
     private final PersistedDataset persistedDataset;
     private final DataType vcfDatatype;
 
-    public Pave(final ResourceFiles resourceFiles, SageOutput sageOutput,
-            final PersistedDataset persistedDataset, final DataType vcfDatatype) {
+    public Pave(final ResourceFiles resourceFiles, SageOutput sageOutput, final PersistedDataset persistedDataset,
+            final DataType vcfDatatype) {
         this.resourceFiles = resourceFiles;
         this.vcfDownload = new InputDownload(sageOutput.finalVcf());
         this.persistedDataset = persistedDataset;
@@ -51,20 +50,12 @@ public abstract class Pave implements Stage<PaveOutput, SomaticRunMetadata> {
 
     @Override
     public List<BashCommand> commands(final SomaticRunMetadata metadata) {
-
-        // build
-        PaveCommandBuilder builder = new PaveCommandBuilder(resourceFiles,
-                metadata.tumor().sampleName(),
-                vcfDownload.getLocalTargetPath());
-
-        return Collections.singletonList(builder.build());
+        return Collections.singletonList(new PaveCommand(resourceFiles, metadata.tumor().sampleName(), vcfDownload.getLocalTargetPath()));
     }
 
     @Override
     public List<BashCommand> inputs() {
-        List<BashCommand> inputs = new ArrayList<>(ImmutableList.of(vcfDownload));
-
-        return inputs;
+        return List.of(vcfDownload);
     }
 
     @Override
@@ -74,7 +65,13 @@ public abstract class Pave implements Stage<PaveOutput, SomaticRunMetadata> {
 
     @Override
     public VirtualMachineJobDefinition vmDefinition(final BashStartupScript bash, final ResultsDirectory resultsDirectory) {
-        return VirtualMachineJobDefinition.purple(bash, resultsDirectory);
+        return ImmutableVirtualMachineJobDefinition.builder()
+                .name(namespace())
+                .startupCommand(bash)
+                .namespacedResults(resultsDirectory)
+                .performanceProfile(custom(2, 10))
+                .workingDiskSpaceGb(375)
+                .build();
     }
 
     @Override
@@ -82,36 +79,22 @@ public abstract class Pave implements Stage<PaveOutput, SomaticRunMetadata> {
         return PaveOutput.builder(namespace()).status(PipelineStatus.SKIPPED).build();
     }
 
-    @NotNull
-    public GoogleStorageLocation persistedOrDefault(final SomaticRunMetadata metadata, final DataType somaticVariantsPave,
-            final String s) {
-        return persistedDataset.path(metadata.tumor().sampleName(), somaticVariantsPave)
-                .orElse(GoogleStorageLocation.of(metadata.bucket(), PersistedLocations.blobForSet(metadata.set(), namespace(), s)));
-    }
-
     @Override
     public PaveOutput output(final SomaticRunMetadata metadata, final PipelineStatus jobStatus, final RuntimeBucket bucket,
             final ResultsDirectory resultsDirectory) {
-
         final String outputFile = outputFile(metadata);
-
-        ImmutablePaveOutput.Builder builder = PaveOutput.builder(namespace())
+        return PaveOutput.builder(namespace())
                 .status(jobStatus)
                 .addFailedLogLocations(GoogleStorageLocation.of(bucket.name(), RunLogComponent.LOG_FILE))
                 .maybeFinalVcf(GoogleStorageLocation.of(bucket.name(), resultsDirectory.path(outputFile)))
                 .addReportComponents(vcfComponent(outputFile, bucket, resultsDirectory))
-                .addDatatypes(new AddDatatype(DataType.SOMATIC_VARIANTS_PAVE,
-                        metadata.barcode(),
-                        new ArchivePath(Folder.root(), namespace(), outputFile)));
-
-        return builder.build();
+                .addDatatypes(new AddDatatype(vcfDatatype, metadata.barcode(), new ArchivePath(Folder.root(), namespace(), outputFile)))
+                .build();
     }
 
     @Override
     public PaveOutput persistedOutput(final SomaticRunMetadata metadata) {
-
         final String outputFile = outputFile(metadata);
-
         return PaveOutput.builder(namespace())
                 .status(PipelineStatus.PERSISTED)
                 .maybeFinalVcf(persistedDataset.path(metadata.tumor().sampleName(), vcfDatatype)
@@ -123,5 +106,4 @@ public abstract class Pave implements Stage<PaveOutput, SomaticRunMetadata> {
     private ReportComponent vcfComponent(final String filename, final RuntimeBucket bucket, final ResultsDirectory resultsDirectory) {
         return new ZippedVcfAndIndexComponent(bucket, namespace(), Folder.root(), filename, resultsDirectory);
     }
-
 }
